syntax = "proto3";

package paymentpb;

// This option defines the import path used in your Go code.
// It must match: pb "path/to/your/protobuf/package/paymentpb"
option go_package = "path/to/your/protobuf/package/paymentpb";

// PaymentService defines the interface for payment operations.
service PaymentService {
  // CreatePayment initiates a new payment transaction.
  rpc CreatePayment (CreatePaymentRequest) returns (CreatePaymentResponse);
  
  // GetPayment retrieves the details of an existing payment.
  rpc GetPayment (GetPaymentRequest) returns (GetPaymentResponse);
  
  // RefundPayment processes a refund for a specific payment.
  rpc RefundPayment (RefundPaymentRequest) returns (RefundPaymentResponse);
}

// Payment represents the state of a payment transaction.
message Payment {
  string id = 1;
  int64 amount = 2;          // Amount in smallest currency unit (e.g., cents)
  string currency = 3;       // e.g., "USD", "EUR"
  string customer_id = 4;
  string status = 5;         // e.g., "PENDING", "COMPLETED", "REFUNDED"
  string created_at = 6;     // ISO 8601 timestamp
}

// --- CreatePayment ---

message CreatePaymentRequest {
  int64 amount = 1;
  string currency = 2;
  string customer_id = 3;
  string metadata = 4;       // Optional metadata for internal tracking
}

message CreatePaymentResponse {
  string payment_id = 1;
  string status = 2;
}

// --- GetPayment ---

message GetPaymentRequest {
  string payment_id = 1;
}

message GetPaymentResponse {
  Payment payment = 1;
}

// --- RefundPayment ---

message RefundPaymentRequest {
  string payment_id = 1;
}

message RefundPaymentResponse {
  string payment_id = 1;
  string status = 2;
}